Fixed centered content overflowing off to the right

--- a/style/main.css
+++ b/style/main.css
@@ -144,7 +144,8 @@ img
 {
 	display: flex;
 	justify-content: center;
-	width: 100vw;
+	width: 90vw;
+	margin-left: 5vw;
 }
 
 
